log/build_2022-06-06_19-00-54/motion_plan_pkg/stdout_stderr.log
running develop
running egg_info
writing build/motion_plan_pkg/motion_plan_pkg.egg-info/PKG-INFO
writing dependency_links to build/motion_plan_pkg/motion_plan_pkg.egg-info/dependency_links.txt
writing entry points to build/motion_plan_pkg/motion_plan_pkg.egg-info/entry_points.txt
writing requirements to build/motion_plan_pkg/motion_plan_pkg.egg-info/requires.txt
writing top-level names to build/motion_plan_pkg/motion_plan_pkg.egg-info/top_level.txt
reading manifest file 'build/motion_plan_pkg/motion_plan_pkg.egg-info/SOURCES.txt'
writing manifest file 'build/motion_plan_pkg/motion_plan_pkg.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/triton-ai/motion_plan_pkg/install/motion_plan_pkg/lib/python3.8/site-packages/motion_plan_pkg/motion_plan.py to motion_plan.cpython-38.pyc
  File "/home/triton-ai/motion_plan_pkg/install/motion_plan_pkg/lib/python3.8/site-packages/motion_plan_pkg/motion_plan.py", line 312
    self.traj_set = self.ltpl_obj.calc_vel_profile(pos_est=self.pos_est,,
                                                                        ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/triton-ai/motion_plan_pkg/install/motion_plan_pkg/lib/python3.8/site-packages/motion_plan_pkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying build/motion_plan_pkg/motion_plan_pkg.egg-info to /home/triton-ai/motion_plan_pkg/install/motion_plan_pkg/lib/python3.8/site-packages/motion_plan_pkg-0.0.0-py3.8.egg-info
running install_scripts
Installing motion_plan script to /home/triton-ai/motion_plan_pkg/install/motion_plan_pkg/lib/motion_plan_pkg
writing list of installed files to '/home/triton-ai/motion_plan_pkg/build/motion_plan_pkg/install.log'
